Refactor JVM/JRE runtime options required by Apache Geode to run on Java 17.